// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: ChipFullWidth should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "justifyContent": "center",
          "marginHorizontal": 4,
          "maxWidth": 192,
          "minHeight": 44,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#EAE1CB",
          "maxWidth": undefined,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          [
            {
              "flexShrink": 1,
              "marginRight": 8,
              "maxWidth": 110,
            },
            {
              "maxWidth": undefined,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Full Width Text With Long Text That Should Be Wrapped
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: ChipText should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "justifyContent": "center",
          "marginHorizontal": 4,
          "maxWidth": 192,
          "minHeight": 44,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#EAE1CB",
          "maxWidth": 192,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="rocket.cat's avatar"
        accessible={true}
        style={
          [
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 28,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 28,
            },
            {
              "marginRight": 8,
              "marginVertical": 8,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderColor={522988065}
          borderRadius={9}
          borderWidth={1}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={28}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          shadowColor="#2C2A21"
          shadowOffset={
            {
              "height": 2,
              "width": 0,
            }
          }
          shadowOpacity={0.16}
          shadowRadius={4}
          source={
            [
              {
                "headers": undefined,
                "uri": "https://open.rocket.chat/avatar/rocket.cat?format=png&size=56",
              },
            ]
          }
          style={
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 28,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 28,
            }
          }
          transition={null}
          width={28}
        />
      </View>
      <View
        style={
          [
            {
              "flexShrink": 1,
              "marginRight": 8,
              "maxWidth": 110,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Rocket.Cat
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#3B382E",
              "fontSize": 16,
            },
            [
              {
                "lineHeight": 16,
              },
              undefined,
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: ChipWithShortText should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "justifyContent": "center",
          "marginHorizontal": 4,
          "maxWidth": 192,
          "minHeight": 44,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#EAE1CB",
          "maxWidth": 192,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="rocket.cat's avatar"
        accessible={true}
        style={
          [
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 28,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 28,
            },
            {
              "marginRight": 8,
              "marginVertical": 8,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderColor={522988065}
          borderRadius={9}
          borderWidth={1}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={28}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          shadowColor="#2C2A21"
          shadowOffset={
            {
              "height": 2,
              "width": 0,
            }
          }
          shadowOpacity={0.16}
          shadowRadius={4}
          source={
            [
              {
                "headers": undefined,
                "uri": "https://open.rocket.chat/avatar/rocket.cat?format=png&size=56",
              },
            ]
          }
          style={
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 28,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 28,
            }
          }
          transition={null}
          width={28}
        />
      </View>
      <View
        style={
          [
            {
              "flexShrink": 1,
              "marginRight": 8,
              "maxWidth": 110,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Short
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#3B382E",
              "fontSize": 16,
            },
            [
              {
                "lineHeight": 16,
              },
              undefined,
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: ChipWithoutAvatar should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "justifyContent": "center",
          "marginHorizontal": 4,
          "maxWidth": 192,
          "minHeight": 44,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#EAE1CB",
          "maxWidth": 192,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          [
            {
              "flexShrink": 1,
              "marginRight": 8,
              "maxWidth": 110,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Without Avatar
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#3B382E",
              "fontSize": 16,
            },
            [
              {
                "lineHeight": 16,
              },
              undefined,
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: ChipWithoutAvatarAndIcon should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "justifyContent": "center",
          "marginHorizontal": 4,
          "maxWidth": 192,
          "minHeight": 44,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#EAE1CB",
          "maxWidth": 192,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          [
            {
              "flexShrink": 1,
              "marginRight": 8,
              "maxWidth": 110,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Without Avatar and Icon
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: ChipWithoutIcon should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "justifyContent": "center",
          "marginHorizontal": 4,
          "maxWidth": 192,
          "minHeight": 44,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#EAE1CB",
          "maxWidth": 192,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="rocket.cat's avatar"
        accessible={true}
        style={
          [
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 28,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 28,
            },
            {
              "marginRight": 8,
              "marginVertical": 8,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderColor={522988065}
          borderRadius={9}
          borderWidth={1}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={28}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          shadowColor="#2C2A21"
          shadowOffset={
            {
              "height": 2,
              "width": 0,
            }
          }
          shadowOpacity={0.16}
          shadowRadius={4}
          source={
            [
              {
                "headers": undefined,
                "uri": "https://open.rocket.chat/avatar/rocket.cat?format=png&size=56",
              },
            ]
          }
          style={
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 28,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 28,
            }
          }
          transition={null}
          width={28}
        />
      </View>
      <View
        style={
          [
            {
              "flexShrink": 1,
              "marginRight": 8,
              "maxWidth": 110,
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Without Icon
        </Text>
      </View>
    </View>
  </View>
</View>
`;
